update final payment